--- a/style.css
+++ b/style.css
@@ -1,16 +1,106 @@
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
+}
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
 }
 ul {
-    list-style: none;
+  list-style: none;
 }
-.container{
-    display:grid;
-    grid-template-columns: 1fr 4fr;
+li {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+  gap: 5px;
+  padding: 10px 25px;
 }
-.sidebar{
-    background-color:#1992d4;
-    color: #FFFFFF;
-    display:grid;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows:repeat(5, 1fr);
+  height: 100%;
+}
+.sidebar {
+  padding: 10px;
+  background-color: #1992d4;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  grid-row: 1/6;
+}
+li > svg {
+  fill: #ffffff;
+  width: 1em;
+  justify-self: center;
+}
+svg {
+  width: 2em;
+}
+#logo {
+  width: 2em;
+}
+nav{
+  display:grid;
+  grid-template-columns: 2fr 1fr;
+  grid-row: 1/2;
+  padding:20px;
+  gap:2em;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+}
+#search{
+  grid-column: 2fr;
+  display:flex;
+  gap:1em;
+}
+#notify{
+  grid-column:1fr;
+  display:flex;
+  gap:2em;
+  justify-content: flex-end;
+  align-items: center;
+}
+#notify>img{
+  width:50px;
+  height:50px;
+}
+input {
+  background-color: #e2e8f0;
+  border: none;
+  border-color: transparent;
+  border-radius: 25px;
+  width:100%;
+}
+#name{
+  display:flex;
+  flex-direction: row;
+  gap:1em;
+  align-items: center;
+}
+#name>img{
+  width:4em;
+  height:4em;
+}
+.buttons{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap:2em;
+}
+button{
+  background-color: #1992d4;
+  color:#e2e8f0;
+  border:none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px 25px;
+  border-radius: 30px;
+}
+main{
+  background-color: #e2e8f0;
+  grid-row: 2/6;
 }
